JitPack 배포를 위한 프로젝트 정리 및 한글화
- 모든 README.md 파일을 한글로 번역
- 불필요한 파일 및 디렉토리 제거 (build/, .idea/, 임시 문서)
- JitPack 설정 파일 추가 (jitpack.yml)
- .gitignore 업데이트로 깨끗한 프로젝트 유지
- 모든 모듈을 간소화된 구조로 리팩토링
- 과도한 엔지니어링 제거 및 직접 AWS SDK 사용

🤖 Generated with Claude Code

Co-Authored-By: Claude <noreply@anthropic.com>